examples/langda_test/history/DoubleDC_5Round/test_history/pl___robot:rough.pl_run3/#eval_mid_3_result.txt
### **Code Evaluation Report: ProbLog and DeepProbLog Analysis**

---

#### **1. Document Title**  
**Evaluation of ProbLog Code for Key Pickup Scenario**

---

#### **2. Background and Purpose**  
The provided ProbLog code models a scenario where a robot attempts to pick up a key and move between locations. The code includes probabilistic rules for actions like `pickup_succeeds`, `drops`, and `goto_succeeds`. The purpose of this evaluation is to:  
- Verify the correctness of the code and its test results.  
- Identify and analyze failures.  
- Ensure compliance with ProbLog's probabilistic and classical reasoning rules.  

---

#### **3. Test Results Summary**  
The test results indicate a parsing error:  
```plaintext
Error evaluating Problog model:
    target = self.ground(db, query, target, label=label)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
problog.errors.NonGroundQuery: Query term still contains variables after grounding for query at(X3,X4,s(s(s(0)))) at 60:7.
```  
- **Failed Queries**:  
  - `query(carrying(key,s(s(s(0)))))`  
  - `query(at(_,_,s(s(s(0)))))`  
- **Impact**: The model fails to evaluate due to non-ground queries, preventing any probability results.  

---

#### **4. Failure Localization**  
- **Error Location**: Line 60, character 7.  
- **Root Cause**: The query `at(_,_,s(s(s(0))))` contains unbound variables (`_`), which violates ProbLog's requirement for ground queries.  
- **Affected Code Block**:  
  ```prolog
  query(at(_,_,s(s(s(0))))).
  ```  
  - **Issue**: The query is not fully instantiated (variables `_` are not bound).  

---

#### **5. Root Cause Analysis**  
- **Classical Prolog**:  
  - The logical structure of the rules (e.g., recursion in `carrying/2` and `slippery/2`) is correct.  
  - Termination is ensured by base cases like `slippery(key,0)`.  
- **ProbLog Probabilistic Rules**:  
  - Probabilities (e.g., `0.7::pickup_succeeds(T)`) comply with `P(¬A) = 1−P(A)`.  
  - Negations (e.g., `\+ drops(key, T)`) are correctly used.  
- **DeepProbLog**: Not used in this code.  

---

#### **6. Overall Analysis**  
- **Functional Requirements**:  
  - **Classical Reasoning**: Met (e.g., `carrying/2` and `at/3` predicates).  
  - **Probabilistic Reasoning**: Met (e.g., probabilistic facts and rules).  
  - **Neural Network Integration**: Not applicable.  
- **Edge Cases**:  
  - Undefined `expand/2` or non-list inputs are not a concern here.  
  - Deep recursion is avoided due to base cases.  

---

#### **7. Error Summary**  

| # | Problem | Impact | Suggestion |
|---|---------|--------|------------|
| 1 | Non-ground query `at(_,_,s(s(s(0)))))` | Model fails to evaluate | Replace `_` with ground terms (e.g., `loc1`, `loc2`). |
| 2 | Non-ground query `carrying(key,s(s(s(0)))))` | Model fails to evaluate | Ensure all queries are fully instantiated. |

---

### **Final Recommendations**  
1. **Fix Queries**: Replace non-ground queries with ground terms:  
   ```prolog
   query(at(loc1, loc2, s(s(s(0))))).
   query(carrying(key, s(s(s(0))))).
   ```  
2. **Re-run Tests**: Verify the corrected code with the updated queries.  

**Word Count**: 400 words.  

--- 

This report adheres to the requested structure and provides actionable insights for resolving the identified issues.